--- a/apps/web/styles/css/style.css
+++ b/apps/web/styles/css/style.css
@@ -2280,6 +2280,7 @@ header .menu-list li a {
   bottom: -6px;
 }
 .rfq-detail .row {
+  margin-top: 20px;
   margin-left: -10px;
   margin-right: -10px;
 }
@@ -5805,7 +5806,7 @@ button:visited {
   padding: 0;
 }
 .card-form .ant-card {
-  padding: 20px 140px 60px 68px;
+  padding: 30px 38px 35px 30px;
 }
 .card-form .ant-card-actions .button-wrapper {
   text-align: left;
