--- a/apps/web/styles/css/style.css
+++ b/apps/web/styles/css/style.css
@@ -368,6 +368,11 @@ header + .main-container {
   text-transform: initial;
   line-height: normal;
 }
+
+.connex-header .connex-nav .connec_nav_suportLg button.disconnect{
+  background-color: #da634a;
+}
+
 .connex-header .connex-nav .connec_nav_suportLg span a{
   color: #ffffff;
   text-decoration: none;
@@ -567,7 +572,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 30px;
+  height: 40px;
   z-index: 99;
 }
 header .connex-nav {
@@ -603,9 +608,10 @@ header .menu-list li:not(:last-child) {
 header .menu-list li a {
   font-size: 12px;
   font-weight: 500;
-  color: #ffffff;
+  color: #ffffff !important;
   text-transform: initial;
   line-height: normal;
+  cursor: pointer;
 }
 
 @media (min-width: 1200px) and (max-width: 1360px) {
@@ -2096,7 +2102,7 @@ header .menu-list li a {
   margin-bottom: 5px;
 }
 .rfq-updates .grid-wrapper .rfq-value .content-wrapper .number {
-  font-size: 34px;
+  font-size: 20px;
   font-weight: 400;
   color: #333333;
   text-transform: uppercase;
